CRUD for Category

--- a/Services.CategoryAPI/appsettings.json
+++ b/Services.CategoryAPI/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=DangKhoa;Database=HKH_Category;TrustedConnection=True;TrustServerCertificate=True"
+    "DefaultConnection": "Server=MSI\\SQLEXPRESS;Database=HKH_Category;Trusted_Connection=True;TrustServerCertificate=True"
   }
 }
