hoang code brand

--- a/Services.CategoryAPI/appsettings.json
+++ b/Services.CategoryAPI/appsettings.json
@@ -7,6 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=MSI\\SQLEXPRESS;Database=HKH_Category;Trusted_Connection=True;TrustServerCertificate=True"
+    //"DefaultConnection": "Server=MSI\\SQLEXPRESS;Database=HKH_Category;Trusted_Connection=True;TrustServerCertificate=True",
+    "DefaultConnection": "Server=THHOANG\\PCTHHOANG;Database=HKH_Category;Trusted_Connection=True;TrustServerCertificate=True;"
   }
 }
