--- a/Services.AuthAPI/appsettings.json
+++ b/Services.AuthAPI/appsettings.json
@@ -7,11 +7,13 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=DESKTOP-DP7DJ08\\MYSUPPERASUS;Database=HKH_Supplier;Trusted_Connection=True;TrustServerCertificate=True"
+    "DefaultConnection": "Server=DESKTOP-DP7DJ08\\MYSUPPERASUS;Database=HKH_AuthAPI;Trusted_Connection=True;TrustServerCertificate=True"
   },
   "ApiSettings": {
+    "JwtOptions": {
       "Secret": "THIS IS USED TO SIGN AND VERIFY JWT TOKENS, REPLACE IT WITH YOUR OWN SECRET",
       "Issuer": "auth-api",
       "Audience": "client"
+    }
   }
-}
+  }
