--- a/Service.SupplierAPI/appsettings.json
+++ b/Service.SupplierAPI/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=DESKTOP-DP7DJ08\\MYSUPPERASUS;Database=HKH_Supplier;Trusted_Connection=True;TrustServerCertificate=True"
+    "DefaultConnection": "Server=THHOANG\\PCTHHOANG;Database=HKH_Supplier;Trusted_Connection=True;TrustServerCertificate=True"
   }
 }
