--- a/Services.OrderAPI/appsettings.json
+++ b/Services.OrderAPI/appsettings.json
@@ -7,6 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=DESKTOP-DP7DJ08\\MYSUPPERASUS;Database=HKH_Order;Trusted_Connection=True;TrustServerCertificate=True"
+    //"DefaultConnection": "Server=DESKTOP-DP7DJ08\\MYSUPPERASUS;Database=HKH_Order;Trusted_Connection=True;TrustServerCertificate=True"
+    "DefaultConnection": "Server=THHOANG\\PCTHHOANG;Database=HKH_Order;Trusted_Connection=True;TrustServerCertificate=True"
   }
 }
