--- a/GatewaySolution/appsettings.json
+++ b/GatewaySolution/appsettings.json
@@ -6,17 +6,34 @@
     }
   },
   "AllowedHosts": "*",
+  "ApiSettings": {
+    "Secret": "THIS IS USED TO SIGN AND VERIFY JWT TOKENS, REPLACE IT WITH YOUR OWN SECRET",
+    "Issuer": "auth-api",
+    "Audience": "client"
+  },
   "Routes": [
     {
-      "DownstreamPathTemplate": "/api/product",
+      "DownstreamPathTemplate": "/api/Category",
       "DownstreamScheme": "https",
       "DownstreamHostAndPorts": [
         {
           "Host": "localhost",
-          "Port": 7000
+          "Port": 7005
         }
       ],
-      "UpstreamPathTemplate": "/api/product",
+      "UpstreamPathTemplate": "/api/Category",
+      "UpstreamHttpMethod": [ "Get" ]
+    },
+    {
+      "DownstreamPathTemplate": "/api/Category/{id}",
+      "DownstreamScheme": "https",
+      "DownstreamHostAndPorts": [
+        {
+          "Host": "localhost",
+          "Port": 7005
+        }
+      ],
+      "UpstreamPathTemplate": "/api/Category/{id}",
       "UpstreamHttpMethod": [ "Get" ]
     }
   ],
