Hung added cors

--- a/GatewaySolution/appsettings.json
+++ b/GatewaySolution/appsettings.json
@@ -13,28 +13,38 @@
   },
   "Routes": [
     {
-      "DownstreamPathTemplate": "/api/Category",
+      "DownstreamPathTemplate": "/api/Brand",
       "DownstreamScheme": "https",
       "DownstreamHostAndPorts": [
         {
           "Host": "localhost",
-          "Port": 7005
+          "Port": 7003
         }
       ],
-      "UpstreamPathTemplate": "/api/Category",
-      "UpstreamHttpMethod": [ "Get" ]
+      "UpstreamPathTemplate": "/api/Brand",
+      "UpstreamHttpMethod": [ "Get" ],
+      "AddHeadersToRequest": {
+        "Access-Control-Allow-Origin": "http://localhost:4200",
+        "Access-Control-Allow-Methods": "GET, POST, PUT, DELETE",
+        "Access-Control-Allow-Headers": "*"
+      }
     },
     {
-      "DownstreamPathTemplate": "/api/Category/{id}",
+      "DownstreamPathTemplate": "/api/Brand/{id}",
       "DownstreamScheme": "https",
       "DownstreamHostAndPorts": [
         {
           "Host": "localhost",
-          "Port": 7005
+          "Port": 7003
         }
       ],
-      "UpstreamPathTemplate": "/api/Category/{id}",
-      "UpstreamHttpMethod": [ "Get" ]
+      "UpstreamPathTemplate": "/api/Brand/{id}",
+      "UpstreamHttpMethod": [ "Get" ],
+      "AddHeadersToRequest": {
+        "Access-Control-Allow-Origin": "http://localhost:4200",
+        "Access-Control-Allow-Methods": "GET, POST, PUT, DELETE",
+        "Access-Control-Allow-Headers": "*"
+      }
     }
   ],
   "GlobalConfiguration": {
