--- a/Services.CategoryAPI/appsettings.json
+++ b/Services.CategoryAPI/appsettings.json
@@ -7,7 +7,12 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    //"DefaultConnection": "Server=MSI\\SQLEXPRESS;Database=HKH_Category;Trusted_Connection=True;TrustServerCertificate=True",
-    "DefaultConnection": "Server=THHOANG\\PCTHHOANG;Database=HKH_Category;Trusted_Connection=True;TrustServerCertificate=True;"
+    "DefaultConnection": "Server=DangKhoa;Database=HKH_Category;Trusted_Connection=True;TrustServerCertificate=True"
+    //"DefaultConnection": "Server=THHOANG\\PCTHHOANG;Database=HKH_Category;Trusted_Connection=True;TrustServerCertificate=True;"
+  },
+  "ApiSettings": {
+    "Secret": "THIS IS USED TO SIGN AND VERIFY JWT TOKENS, REPLACE IT WITH YOUR OWN SECRET",
+    "Issuer": "auth-api",
+    "Audience": "client"
   }
 }
