--- a/Services.AuthAPI/appsettings.json
+++ b/Services.AuthAPI/appsettings.json
@@ -7,7 +7,9 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=DESKTOP-DP7DJ08\\MYSUPPERASUS;Database=HKH_AuthAPI;Trusted_Connection=True;TrustServerCertificate=True"
+    //"DefaultConnection": "Server=DESKTOP-DP7DJ08\\MYSUPPERASUS;Database=HKH_AuthAPI;Trusted_Connection=True;TrustServerCertificate=True",
+    "DefaultConnection": "Server=THHOANG\\PCTHHOANG;Database=HKH_AuthAPI;Trusted_Connection=True;TrustServerCertificate=True;"
+
   },
   "ApiSettings": {
     "JwtOptions": {
