--- a/Services.AddressAPI/appsettings.json
+++ b/Services.AddressAPI/appsettings.json
@@ -7,7 +7,8 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=DESKTOP-DP7DJ08\\MYSUPPERASUS;Database=HKH_Address;Trusted_Connection=True;TrustServerCertificate=True"
+    //"DefaultConnection": "Server=DESKTOP-DP7DJ08\\MYSUPPERASUS;Database=HKH_Address;Trusted_Connection=True;TrustServerCertificate=True"
+    "DefaultConnection": "Server=THHOANG\\PCTHHOANG;Database=HKH_Address;Trusted_Connection=True;TrustServerCertificate=True;"
   },
   "ApiSettings": {
     "Secret": "THIS IS USED TO SIGN AND VERIFY JWT TOKENS, REPLACE IT WITH YOUR OWN SECRET",
