--- a/Services.AuthAPI/appsettings.json
+++ b/Services.AuthAPI/appsettings.json
@@ -7,8 +7,8 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    //"DefaultConnection": "Server=DESKTOP-DP7DJ08\\MYSUPPERASUS;Database=HKH_AuthAPI;Trusted_Connection=True;TrustServerCertificate=True",
-    "DefaultConnection": "Server=THHOANG\\PCTHHOANG;Database=HKH_AuthAPI;Trusted_Connection=True;TrustServerCertificate=True;"
+    //"DefaultConnection": "Server=THHOANG\\PCTHHOANG;Database=HKH_AuthAPI;Trusted_Connection=True;TrustServerCertificate=True;"
+    "DefaultConnection": "Server=DESKTOP-DP7DJ08\\MYSUPPERASUS;Database=HKH_Auth;Trusted_Connection=True;TrustServerCertificate=True"
 
   },
   "ApiSettings": {
@@ -16,6 +16,9 @@
       "Secret": "THIS IS USED TO SIGN AND VERIFY JWT TOKENS, REPLACE IT WITH YOUR OWN SECRET",
       "Issuer": "auth-api",
       "Audience": "client"
-    }
+    },
+    "Secret": "THIS IS USED TO SIGN AND VERIFY JWT TOKENS, REPLACE IT WITH YOUR OWN SECRET",
+    "Issuer": "auth-api",
+    "Audience": "client"
   }
  }
