--- a/Services.CategoryAPI/appsettings.json
+++ b/Services.CategoryAPI/appsettings.json
@@ -8,7 +8,8 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     //"DefaultConnection": "Server=DangKhoa;Database=HKH_Category;Trusted_Connection=True;TrustServerCertificate=True"
-    "DefaultConnection": "Server=THHOANG\\PCTHHOANG;Database=HKH_Category;Trusted_Connection=True;TrustServerCertificate=True;"
+    //"DefaultConnection": "Server=THHOANG\\PCTHHOANG;Database=HKH_Category;Trusted_Connection=True;TrustServerCertificate=True;"
+    "DefaultConnection": "Server=DESKTOP-DP7DJ08\\MYSUPPERASUS;Database=HKH_Category;Trusted_Connection=True;TrustServerCertificate=True;"
   },
   "ApiSettings": {
     "Secret": "THIS IS USED TO SIGN AND VERIFY JWT TOKENS, REPLACE IT WITH YOUR OWN SECRET",
