--- a/Services.BrandAPI/appsettings.json
+++ b/Services.BrandAPI/appsettings.json
@@ -8,8 +8,8 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     //"DefaultConnection": "Server=MSI\\SQLEXPRESS;Database=HKH_Category;Trusted_Connection=True;TrustServerCertificate=True"
-    //"DefaultConnection": "Server=THHOANG\\PCTHHOANG;Database=HKH_Brand;Trusted_Connection=True;TrustServerCertificate=True;"
-    "DefaultConnection": "Server=DESKTOP-DP7DJ08\\MYSUPPERASUS;Database=HKH_Brand;Trusted_Connection=True;TrustServerCertificate=True;"
+    "DefaultConnection": "Server=THHOANG\\PCTHHOANG;Database=HKH_Brand;Trusted_Connection=True;TrustServerCertificate=True;"
+    //"DefaultConnection": "Server=DESKTOP-DP7DJ08\\MYSUPPERASUS;Database=HKH_Brand;Trusted_Connection=True;TrustServerCertificate=True;"
 
   },
   "ApiSettings": {
