--- a/Services.CartAPI/appsettings.json
+++ b/Services.CartAPI/appsettings.json
@@ -15,5 +15,8 @@
     "Secret": "THIS IS USED TO SIGN AND VERIFY JWT TOKENS, REPLACE IT WITH YOUR OWN SECRET",
     "Issuer": "auth-api",
     "Audience": "client"
+  },
+  "ServiceUrls": {
+    "ProductAPI": "https://localhost:7777"
   }
 }
