--- a/Services.ColorAPI/appsettings.json
+++ b/Services.ColorAPI/appsettings.json
@@ -8,8 +8,8 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     //"DefaultConnection": "Server=MSI\\SQLEXPRESS;Database=HKH_Category;Trusted_Connection=True;TrustServerCertificate=True"
-    //"DefaultConnection": "Server=THHOANG\\PCTHHOANG;Database=HKH_Color;Trusted_Connection=True;TrustServerCertificate=True;"
-    "DefaultConnection": "Server=DESKTOP-DP7DJ08\\MYSUPPERASUS;Database=HKH_Color;Trusted_Connection=True;TrustServerCertificate=True;"
+    "DefaultConnection": "Server=THHOANG\\PCTHHOANG;Database=HKH_Color;Trusted_Connection=True;TrustServerCertificate=True;"
+    //"DefaultConnection": "Server=DESKTOP-DP7DJ08\\MYSUPPERASUS;Database=HKH_Color;Trusted_Connection=True;TrustServerCertificate=True;"
   },
   "ApiSettings": {
     "Secret": "THIS IS USED TO SIGN AND VERIFY JWT TOKENS, REPLACE IT WITH YOUR OWN SECRET",
