--- a/Services.ProductAPI/appsettings.json
+++ b/Services.ProductAPI/appsettings.json
@@ -8,12 +8,20 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     //"DefaultConnection": "Server=MSI\\SQLEXPRESS;Database=HKH_Category;Trusted_Connection=True;TrustServerCertificate=True"
-    //"DefaultConnection": "Server=THHOANG\\PCTHHOANG;Database=HKH_Product;Trusted_Connection=True;TrustServerCertificate=True;"
-    "DefaultConnection": "Server=DESKTOP-DP7DJ08\\MYSUPPERASUS;Database=HKH_Product;Trusted_Connection=True;TrustServerCertificate=True;"
+    "DefaultConnection": "Server=THHOANG\\PCTHHOANG;Database=HKH_Product;Trusted_Connection=True;TrustServerCertificate=True;"
+    //"DefaultConnection": "Server=DESKTOP-DP7DJ08\\MYSUPPERASUS;Database=HKH_Product;Trusted_Connection=True;TrustServerCertificate=True;"
   },
   "ApiSettings": {
     "Secret": "THIS IS USED TO SIGN AND VERIFY JWT TOKENS, REPLACE IT WITH YOUR OWN SECRET",
     "Issuer": "auth-api",
     "Audience": "client"
+  },
+  "ServiceUrls": {
+    "BrandAPI": "https://localhost:7777",
+    "CategoryAPI": "https://localhost:7777",
+    "SupplierAPI": "https://localhost:7777",
+    "NationAPI": "https://localhost:7777",
+    "ColorAPI": "https://localhost:7777",
+    "SizeAPI": "https://localhost:7777",
   }
 }
