--- a/Services.BrandAPI/appsettings.json
+++ b/Services.BrandAPI/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=DangKhoa;Database=HKH_Brand;Trusted_Connection=True;TrustServerCertificate=True",
+    "DefaultConnection": "Server=DangKhoa;Database=HKH_Brand;Trusted_Connection=True;TrustServerCertificate=True"
     //"DefaultConnection": "Server=DESKTOP-DP7DJ08\\MYSUPPERASUS;Database=HKH_Brand;Trusted_Connection=True;TrustServerCertificate=True;"
   },
   "ApiSettings": {
