--- a/Services.ProductAPI/appsettings.json
+++ b/Services.ProductAPI/appsettings.json
@@ -7,8 +7,8 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    //"DefaultConnection": "Server=MSI\\SQLEXPRESS;Database=HKH_Category;Trusted_Connection=True;TrustServerCertificate=True"
-    "DefaultConnection": "Server=THHOANG\\PCTHHOANG;Database=HKH_Product;Trusted_Connection=True;TrustServerCertificate=True;"
+    "DefaultConnection": "Server=DangKhoa;Database=HKH_Product;Trusted_Connection=True;TrustServerCertificate=True"
+    //"DefaultConnection": "Server=THHOANG\\PCTHHOANG;Database=HKH_Product;Trusted_Connection=True;TrustServerCertificate=True;"
     //"DefaultConnection": "Server=DESKTOP-DP7DJ08\\MYSUPPERASUS;Database=HKH_Product;Trusted_Connection=True;TrustServerCertificate=True;"
   },
   "ApiSettings": {
