--- a/Services.AuthAPI/appsettings.json
+++ b/Services.AuthAPI/appsettings.json
@@ -8,8 +8,8 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": 
-      "Server=DangKhoa;Database=HKH_AuthAPI;Trusted_Connection=True;TrustServerCertificate=True"
-      //"Server=DESKTOP-DP7DJ08\\MYSUPPERASUS;Database=HKH_AuthAPI;Trusted_Connection=True;TrustServerCertificate=True"
+      //"Server=DangKhoa;Database=HKH_AuthAPI;Trusted_Connection=True;TrustServerCertificate=True"
+      "Server=DESKTOP-DP7DJ08\\MYSUPPERASUS;Database=HKH_Auth;Trusted_Connection=True;TrustServerCertificate=True"
   },
   "ApiSettings": {
     "JwtOptions": {
