--- a/Services.OrderAPI/appsettings.json
+++ b/Services.OrderAPI/appsettings.json
@@ -7,8 +7,8 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=DangKhoa;Database=HKH_Order;Trusted_Connection=True;TrustServerCertificate=True"
-    //"DefaultConnection": "Server=DESKTOP-DP7DJ08\\MYSUPPERASUS;Database=HKH_Order;Trusted_Connection=True;TrustServerCertificate=True;"
+    //"DefaultConnection": "Server=DangKhoa;Database=HKH_Order;Trusted_Connection=True;TrustServerCertificate=True"
+    "DefaultConnection": "Server=DESKTOP-DP7DJ08\\MYSUPPERASUS;Database=HKH_Order;Trusted_Connection=True;TrustServerCertificate=True;"
   },
   "ApiSettings": {
     "Secret": "THIS IS USED TO SIGN AND VERIFY JWT TOKENS, REPLACE IT WITH YOUR OWN SECRET",
