--- a/Services.ProductAPI/appsettings.json
+++ b/Services.ProductAPI/appsettings.json
@@ -6,11 +6,12 @@
     }
   },
   "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "DefaultConnection": "Server=DangKhoa;Database=HKH_Product;Trusted_Connection=True;TrustServerCertificate=True"
-    //"DefaultConnection": "Server=THHOANG\\PCTHHOANG;Database=HKH_Product;Trusted_Connection=True;TrustServerCertificate=True;"
-    //"DefaultConnection": "Server=DESKTOP-DP7DJ08\\MYSUPPERASUS;Database=HKH_Product;Trusted_Connection=True;TrustServerCertificate=True;"
-  },
+    "ConnectionStrings": {
+        //"DefaultConnection": "Server=DangKhoa;Database=HKH_Product;Trusted_Connection=True;TrustServerCertificate=True",
+        "DefaultConnection": "Server=HAICHAUPN\\THIEUHOANG;Database=HKH_Product;Trusted_Connection=True;TrustServerCertificate=True"
+        //"DefaultConnection": "Server=THHOANG\\PCTHHOANG;Database=HKH_Product;Trusted_Connection=True;TrustServerCertificate=True;"
+        //"DefaultConnection": "Server=DESKTOP-DP7DJ08\\MYSUPPERASUS;Database=HKH_Product;Trusted_Connection=True;TrustServerCertificate=True;"
+    },
   "ApiSettings": {
     "Secret": "THIS IS USED TO SIGN AND VERIFY JWT TOKENS, REPLACE IT WITH YOUR OWN SECRET",
     "Issuer": "auth-api",
