--- a/Service.SupplierAPI/appsettings.json
+++ b/Service.SupplierAPI/appsettings.json
@@ -8,8 +8,8 @@
   "AllowedHosts": "*",
     "ConnectionStrings": {
         //"Server=THHOANG\\PCTHHOANG;Database=HKH_Supplier;Trusted_Connection=True;TrustServerCertificate=True"
-        //"DefaultConnection": "Server=DangKhoa;Database=HKH_Supplier;Trusted_Connection=True;TrustServerCertificate=True",
-        "DefaultConnection": "Server=HAICHAUPN\\THIEUHOANG;Database=HKH_Supplier;Trusted_Connection=True;TrustServerCertificate=True"
+        "DefaultConnection": "Server=DangKhoa;Database=HKH_Supplier;Trusted_Connection=True;TrustServerCertificate=True",
+        //"DefaultConnection": "Server=HAICHAUPN\\THIEUHOANG;Database=HKH_Supplier;Trusted_Connection=True;TrustServerCertificate=True"
         //"DefaultConnection": "Server=DESKTOP-DP7DJ08\\MYSUPPERASUS;Database=HKH_Supplier;Trusted_Connection=True;TrustServerCertificate=True"
     },
   "ApiSettings": {
