--- a/Services.SizeAPI/appsettings.json
+++ b/Services.SizeAPI/appsettings.json
@@ -7,8 +7,8 @@
   },
   "AllowedHosts": "*",
     "ConnectionStrings": {
-        //"DefaultConnection": "Server=DangKhoa;Database=HKH_Size;Trusted_Connection=True;TrustServerCertificate=True",
-        "DefaultConnection": "Server=HAICHAUPN\\THIEUHOANG;Database=HKH_Size;Trusted_Connection=True;TrustServerCertificate=True"
+        "DefaultConnection": "Server=DangKhoa;Database=HKH_Size;Trusted_Connection=True;TrustServerCertificate=True",
+        //"DefaultConnection": "Server=HAICHAUPN\\THIEUHOANG;Database=HKH_Size;Trusted_Connection=True;TrustServerCertificate=True"
         //"DefaultConnection": "Server=THHOANG\\PCTHHOANG;Database=HKH_Size;Trusted_Connection=True;TrustServerCertificate=True;"
         //"DefaultConnection": "Server=DESKTOP-DP7DJ08\\MYSUPPERASUS;Database=HKH_Size;Trusted_Connection=True;TrustServerCertificate=True;"
     },
