--- a/Services.AuthAPI/appsettings.json
+++ b/Services.AuthAPI/appsettings.json
@@ -9,8 +9,8 @@
     "ConnectionStrings": {
         "DefaultConnection":
         //"Server=DangKhoa;Database=HKH_AuthAPI;Trusted_Connection=True;TrustServerCertificate=True"
-        //"Server=DESKTOP-DP7DJ08\\MYSUPPERASUS;Database=HKH_Auth;Trusted_Connection=True;TrustServerCertificate=True",
-        "Server=HAICHAUPN\\THIEUHOANG;Database=HKH_Auth;Trusted_Connection=True;TrustServerCertificate=True"
+        "Server=DESKTOP-DP7DJ08\\MYSUPPERASUS;Database=HKH_Auth;Trusted_Connection=True;TrustServerCertificate=True",
+        //"Server=HAICHAUPN\\THIEUHOANG;Database=HKH_Auth;Trusted_Connection=True;TrustServerCertificate=True"
 
     },
   "ApiSettings": {
