--- a/Services.GoodsReceiptAPI/appsettings.json
+++ b/Services.GoodsReceiptAPI/appsettings.json
@@ -7,11 +7,15 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=DESKTOP-DP7DJ08\\MYSUPPERASUS;Database=HKH_GoodsReceipt;Trusted_Connection=True;TrustServerCertificate=True"
+    //"DefaultConnection": "Server=DESKTOP-DP7DJ08\\MYSUPPERASUS;Database=HKH_GoodsReceipt;Trusted_Connection=True;TrustServerCertificate=True",
+    "DefaultConnection": "Server=MSI\\SQLEXPRESS;Database=HKH_GoodsReceipt;Trusted_Connection=True;TrustServerCertificate=True"
   },
   "ApiSettings": {
     "Secret": "THIS IS USED TO SIGN AND VERIFY JWT TOKENS, REPLACE IT WITH YOUR OWN SECRET",
     "Issuer": "auth-api",
     "Audience": "client"
+  },
+  "ServiceUrls": {
+    "ProductAPI": "https://localhost:7777"
   }
 }
