--- a/Services.Nation/appsettings.json
+++ b/Services.Nation/appsettings.json
@@ -6,12 +6,13 @@
     }
   },
   "AllowedHosts": "*",
-    "ConnectionStrings": {
-        "DefaultConnection": "Server=DangKhoa;Database=HKH_Nation;Trusted_Connection=True;TrustServerCertificate=True",
-        //"DefaultConnection": "Server=HAICHAUPN\\THIEUHOANG;Database=HKH_Nation;Trusted_Connection=True;TrustServerCertificate=True"
-        //"DefaultConnection": "Server=THHOANG\\PCTHHOANG;Database=HKH_Nation;Trusted_Connection=True;TrustServerCertificate=True;"
-        //"DefaultConnection": "Server=DESKTOP-DP7DJ08\\MYSUPPERASUS;Database=HKH_Nation;Trusted_Connection=True;TrustServerCertificate=True;"
-    },
+  "ConnectionStrings": {
+    //"DefaultConnection": "Server=DangKhoa;Database=HKH_Nation;Trusted_Connection=True;TrustServerCertificate=True"
+    "DefaultConnection": "Server=MSI\\SQLEXPRESS;Database=HKH_Nation;Trusted_Connection=True;TrustServerCertificate=True"
+    //"DefaultConnection": "Server=HAICHAUPN\\THIEUHOANG;Database=HKH_Nation;Trusted_Connection=True;TrustServerCertificate=True"
+    //"DefaultConnection": "Server=THHOANG\\PCTHHOANG;Database=HKH_Nation;Trusted_Connection=True;TrustServerCertificate=True;"
+    //"DefaultConnection": "Server=DESKTOP-DP7DJ08\\MYSUPPERASUS;Database=HKH_Nation;Trusted_Connection=True;TrustServerCertificate=True;"
+  },
   "ApiSettings": {
     "Secret": "THIS IS USED TO SIGN AND VERIFY JWT TOKENS, REPLACE IT WITH YOUR OWN SECRET",
     "Issuer": "auth-api",
