--- a/Services.AuthAPI/appsettings.json
+++ b/Services.AuthAPI/appsettings.json
@@ -6,12 +6,12 @@
     }
   },
   "AllowedHosts": "*",
-    "ConnectionStrings": {
-        "DefaultConnection":
-        //"Server=DangKhoa;Database=HKH_AuthAPI;Trusted_Connection=True;TrustServerCertificate=True"
-        "Server=DESKTOP-DP7DJ08\\MYSUPPERASUS;Database=HKH_Auth;Trusted_Connection=True;TrustServerCertificate=True",
-        //"Server=HAICHAUPN\\THIEUHOANG;Database=HKH_Auth;Trusted_Connection=True;TrustServerCertificate=True"
-
+  "ConnectionStrings": {
+    "DefaultConnection":
+    //"Server=DangKhoa;Database=HKH_AuthAPI;Trusted_Connection=True;TrustServerCertificate=True"
+    //"Server=DESKTOP-DP7DJ08\\MYSUPPERASUS;Database=HKH_Auth;Trusted_Connection=True;TrustServerCertificate=True",
+    //"Server=HAICHAUPN\\THIEUHOANG;Database=HKH_Auth;Trusted_Connection=True;TrustServerCertificate=True"
+    "Server=THHOANG\\PCTHHOANG;Database=HKH_AuthAPI;Trusted_Connection=True;TrustServerCertificate=True;"
   },
   "ApiSettings": {
     "JwtOptions": {
