--- a/Services.CartAPI/appsettings.json
+++ b/Services.CartAPI/appsettings.json
@@ -7,8 +7,8 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    //"DefaultConnection": "Server=DangKhoa;Database=HKH_CartItem;Trusted_Connection=True;TrustServerCertificate=True"
-    "DefaultConnection": "Server=THHOANG\\PCTHHOANG;Database=HKH_CartItem;Trusted_Connection=True;TrustServerCertificate=True;"
+    "DefaultConnection": "Server=DangKhoa;Database=HKH_CartItem;Trusted_Connection=True;TrustServerCertificate=True"
+    //"DefaultConnection": "Server=THHOANG\\PCTHHOANG;Database=HKH_CartItem;Trusted_Connection=True;TrustServerCertificate=True;"
     //"DefaultConnection": "Server=HAICHAUPN\\THIEUHOANG;Database=HKH_CartItem;Trusted_Connection=True;TrustServerCertificate=True"
     //"DefaultConnection": "Server=DESKTOP-DP7DJ08\\MYSUPPERASUS;Database=HKH_CartItem;Trusted_Connection=True;TrustServerCertificate=True;"
   },
