--- a/Services.GoodsReceiptAPI/appsettings.json
+++ b/Services.GoodsReceiptAPI/appsettings.json
@@ -8,7 +8,7 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     //"DefaultConnection": "Server=DESKTOP-DP7DJ08\\MYSUPPERASUS;Database=HKH_GoodsReceipt;Trusted_Connection=True;TrustServerCertificate=True",
-    "DefaultConnection": "Server=MSI\\SQLEXPRESS;Database=HKH_GoodsReceipt;Trusted_Connection=True;TrustServerCertificate=True"
+    "DefaultConnection": "Server=DangKhoa;Database=HKH_GoodsReceipt;Trusted_Connection=True;TrustServerCertificate=True"
   },
   "ApiSettings": {
     "Secret": "THIS IS USED TO SIGN AND VERIFY JWT TOKENS, REPLACE IT WITH YOUR OWN SECRET",
@@ -16,6 +16,7 @@
     "Audience": "client"
   },
   "ServiceUrls": {
-    "ProductAPI": "https://localhost:7777"
+    "ProductAPI": "https://localhost:7777",
+    "SupplierAPI": "https://localhost:7777"
   }
 }
