--- a/Services.GoodsReceiptAPI/appsettings.json
+++ b/Services.GoodsReceiptAPI/appsettings.json
@@ -8,7 +8,8 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     //"DefaultConnection": "Server=DESKTOP-DP7DJ08\\MYSUPPERASUS;Database=HKH_GoodsReceipt;Trusted_Connection=True;TrustServerCertificate=True",
-    "DefaultConnection": "Server=MSI\\SQLEXPRESS;Database=HKH_GoodsReceipt;Trusted_Connection=True;TrustServerCertificate=True"
+    //"DefaultConnection": "Server=MSI\\SQLEXPRESS;Database=HKH_GoodsReceipt;Trusted_Connection=True;TrustServerCertificate=True",
+    "DefaultConnection": "Server=THHOANG\\PCTHHOANG;Database=HKH_GoodsReceipt;Trusted_Connection=True;TrustServerCertificate=True;"
   },
   "ApiSettings": {
     "Secret": "THIS IS USED TO SIGN AND VERIFY JWT TOKENS, REPLACE IT WITH YOUR OWN SECRET",
