--- a/Service.SupplierAPI/appsettings.json
+++ b/Service.SupplierAPI/appsettings.json
@@ -8,10 +8,10 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     //"Server=THHOANG\\PCTHHOANG;Database=HKH_Supplier;Trusted_Connection=True;TrustServerCertificate=True"
-    "DefaultConnection": "Server=DangKhoa;Database=HKH_Supplier;Trusted_Connection=True;TrustServerCertificate=True"
+    //"DefaultConnection": "Server=DangKhoa;Database=HKH_Supplier;Trusted_Connection=True;TrustServerCertificate=True"
     //"DefaultConnection": "Server=MSI\\SQLEXPRESS;Database=HKH_Supplier;Trusted_Connection=True;TrustServerCertificate=True"
     //"DefaultConnection": "Server=HAICHAUPN\\THIEUHOANG;Database=HKH_Supplier;Trusted_Connection=True;TrustServerCertificate=True"
-    //"DefaultConnection": "Server=DESKTOP-DP7DJ08\\MYSUPPERASUS;Database=HKH_Supplier;Trusted_Connection=True;TrustServerCertificate=True"
+    "DefaultConnection": "Server=DESKTOP-DP7DJ08\\MYSUPPERASUS;Database=HKH_Supplier;Trusted_Connection=True;TrustServerCertificate=True"
   },
   "ApiSettings": {
       "Secret": "THIS IS USED TO SIGN AND VERIFY JWT TOKENS, REPLACE IT WITH YOUR OWN SECRET",
